--- a/titac.css
+++ b/titac.css
@@ -7,5 +7,84 @@
 body
 {
     background-color:  lightblue;
+    color: black;
+    text-align: center;
+}
+
+.container
+{
+    padding: 1rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    /* border: 2px dashed red; */
+   
+}
+
+.game
+{
+    padding: 1rem;
+    height: 60vmin;
+    width: 60vmin;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5vmin;
+    /* border: 1px dashed red; */
+
+    border : 2px solid black;   
+}
+
+
+.box
+{
+    height: 18vmin;
+    width: 18vmin;
+    border-radius: 0.5rem;
+    /* border: none; */
+    /* box-shadow: 0 0 1rem black; */
+    font-size: 7vmin;
+    background-color: tomato;
+    color: blue;
+
+    overflow: auto; /* Hide overflow text */
+    word-wrap: break-word; /* Ensure long words break properly */
     
+    
+ 
+}
+
+
+#reset
+{
+    padding: 1rem;
+    font-size: 1.5rem;
+    background-color: red;
+    color: white;
+    border-radius: 1rem;
+    border: 2px dashed black;
+}
+
+
+#new
+{
+    padding: 0.5rem;
+    font-size: 1.5rem;
+    background-color: rgb(253, 103, 3);
+    color: white;
+    border-radius: 1rem;
+    border: 2px dashed black;
+}
+
+#msg
+{
+    font-size: 3rem;
+    color: rgb(0, 0, 0);
+}
+
+.msgwinner
+{
+    display: none;
 }
