--- a/titac.css
+++ b/titac.css
@@ -3,7 +3,18 @@
     margin: 1px;
     padding: 1px;
 } */
+h1
+{
+    color: rgb(0, 0, 0);
+    -webkit-text-stroke: 1px rgb(255, 0, 0);  /*red stroke*/
+/* 
+    text-shadow:  
+    -2px -2px 0 white,  
+     2px -2px 0 white,  
+    -2px  2px 0 white,  
+     2px  2px 0 white;               White stroke effect */
 
+}
 body
 {
     background-color:  lightblue;
